bin_PROGRAMS = smbnetfs

smbnetfs_SOURCES = \
	common.c		common.h		\
	smbitem.c		smbitem.h		\
	auth.c			auth.h			\
	auth-libsecret.c	auth-libsecret.h	\
	charset.c		charset.h		\
	smb_conn_proto.h				\
	smb_conn_srv.c		smb_conn_srv.h		\
	process.c		process.h		\
	neg_cache.c		neg_cache.h		\
	smb_conn.c		smb_conn.h		\
	samba.c			samba.h			\
	stat_workaround.c	stat_workaround.h	\
	function.c		function.h		\
	event.c			event.h			\
	reconfigure.c		reconfigure.h		\
	main.c
